css/pages.css
 /* ---------------------------------------------------------------------------------------- INDEX ICONS */

.index-icons ul {
	font-size: 0;
	display: flex;
	flex-flow: row wrap;
	gap: 15px;
}

.index-icons li a {
	display: flex;
	height: 150px;
	width: 150px;
	flex-flow: column;
	justify-content: space-between;
	align-items: center;
	border-radius: 4px;
}

.index-icons li a span {
	display: flex;
	align-items: flex-end;
	width: 100%;
	font-size: var(--text-size-1);
	font-weight: bold;
	padding-left: 10px;
	padding-bottom: 10px;
	padding-right: 10px;
	height: 48px;
}

.index-icons li:nth-child(1) a { color: #EDEBF4; }
.index-icons li:nth-child(2) a { color: #F8DAE1; }
.index-icons li:nth-child(3) a { color: #FFF8F3; }
.index-icons li:nth-child(4) a { color: #E7F3F1; }
.index-icons li:nth-child(5) a { color: #E3E3E4; }
.index-icons li:nth-child(6) a { color: #EBF6FF; }
.index-icons li:nth-child(7) a { color: #E3E3E4; }

.index-icons li:nth-child(1) svg path { stroke: #EDEBF4; }
.index-icons li:nth-child(2) svg path { stroke: #F8DAE1; }
.index-icons li:nth-child(3) svg path { stroke: #FFF8F3; }
.index-icons li:nth-child(4) svg path { stroke: #E7F3F1; }
.index-icons li:nth-child(5) svg path { stroke: #E3E3E4; }
.index-icons li:nth-child(6) svg path { stroke: #DBF0FF; }
.index-icons li:nth-child(7) svg path { stroke: #E3E3E4; }

.index-icons li:nth-child(1) a { background: rgb(171,161,204); background: linear-gradient(135deg, rgba(171,161,204,1) 0%, rgba(71,52,127,1) 100%); }
.index-icons li:nth-child(2) a { background: rgb(234,147,167); background: linear-gradient(135deg, rgba(234,147,167,1) 0%, rgba(169,57,83,1) 100%); }
.index-icons li:nth-child(3) a { background: rgb(252,194,163); background: linear-gradient(135deg, rgba(252,194,163,1) 0%, rgba(243,115,53,1) 100%); }
.index-icons li:nth-child(4) a { background: rgb(134,186,174); background: linear-gradient(135deg, rgba(134,186,174,1) 0%, rgba(42,123,96,1) 100%); }
.index-icons li:nth-child(5) a { background: rgb(156,156,159); background: linear-gradient(135deg, rgba(156,156,159,1) 0%, rgba(73,77,88,1) 100%); }
.index-icons li:nth-child(6) a { background: rgb(156,156,159); background: linear-gradient(135deg, rgba(138,182,214,1) 0%, rgba(0,97,168,1) 100%); }
.index-icons li:nth-child(7) a { background: rgb(156,156,159); background: linear-gradient(135deg, rgba(156,156,159,1) 0%, rgba(73,77,88,1) 100%); }

/* ---------------------------------------------------------------------------------------- INDEX */

.index-top-wrapper {
	display: flex;
	flex-flow: row wrap;
	margin-top: 30px;
	margin-bottom: 25px;
	gap: 25px;
}

.index-user,
.index-player {
	box-sizing: content-box; /* necessary for borderbottom*/
	background-color: var(--bg-3);
	border-bottom: solid 1px var(--bg-5);
}

/* ---------------- index user  */

.index-user .left { display: flex; align-items: center; }
.index-user .bottom { display: flex; flex: 1; align-items: center; }

.index-user {
	flex: 3;
	height: 78px;
	display: flex;
	flex-flow: wrap;
	align-items: center;
	padding: 0 24px;
	border-radius: 4px;
}

.index-user img {
	height: 40px;
	width: 40px;
	border-radius: 50%;
	margin-right: 10px;
}

.index-user .icon-spotify { margin-right: 10px; }

.index-user .left p { font-weight: 400; } /* username */

.index-user .stats { margin-left: 15px; }
.index-user .stats:nth-child(1) { margin-left: 40px; }

.index-user .stats p { /*user track / playlist counter */
	/*font-size: var(--text-size-1);*/
	display: inline-block;
}

.index-user .stats p:nth-child(2) { color: var(--text-color-2); margin-left: 5px; }

.index-user .right { margin-left: auto; } 
.index-user .icon-logout { cursor: pointer; }

/* ---------------- index login  */

.index-user:not(.show-login) .login { display: none; }
.index-user.show-login .user { display: none; }
.index-user.show-login { cursor: pointer; }

/* ---------------- index player  */

.index-player {
	flex: 2;
	display: flex;
	height: 78px;
	align-items: center;
	border-radius: 4px;
	padding-right: 24px;
}

.index-player img {
	height: 78px;
	width: 78px;
	border-radius: 4px 0 0px 4px;
	margin-right: 10px;
}

.index-player p { white-space: pre; }
/*.index-player p { color: #333333; }*/
.index-player p span { color: var(--text-color-2); }
/*.dark .index-player p { color: #B3B3B3 }*/
/*.dark .index-player p span { color: #808080; }*/

/* text animation related */

.index-player .text-wrapper {
	flex: 1;
	min-height: 1.1rem;
	overflow: hidden;
	position: relative;
	margin-right: 10px;
}

.index-player .text-wrapper p {
	position: absolute;
	height: 100%;
	line-height: 1;
}

.index-player .text-wrapper p.animate {
	animation: backAndForth 3s linear infinite alternate;
}

@keyframes backAndForth {
	0% { transform: translateX(0%) }
  	100% { transform: translateX(-20%) }
}

/* icons */

.index-player .icon-player-refresh,
.index-player .icon-player-lyrics { cursor: pointer; }
/*.index-player .icon-player-refresh { margin-left: auto; }*/ /* no need due to flex:1 on text-wrapper */
.index-player .icon-player-lyrics { margin-left: 15px; }

/* placeholder */

.index-player {
	position: relative;
}

.index-player .placeholder {
	position: absolute;
	left: 0;
	top: 0;
	height: 78px;
	width: 78px;
	display: flex;
	justify-content: center;
	align-items: center;
	border-radius: 4px 0 0px 4px;
	background-color: var(--bg-img);
}

.index-player .placeholder svg path {
	fill: var(--text-color-2);
}

.index-player .placeholder:not(.show) { display: none; }

/* ---------------------------------------------------------------------------------------- PAGE TOP */

.page-top-wrapper {
	width: 100%;
	display: flex;
	flex-flow: row;
	justify-content: space-between;
	margin-top: 30px;
	margin-bottom: 30px;
	user-select: none;
	align-items: center;
}

.page-title {
	font-size: var(--text-size-4);
	font-weight: 500;
}
/* ... */

